[package]
name = "my-miden-client"
version = "0.1.0"
edition = "2021"

[dependencies]
miden-client = { version = "0.13.0", features = ["testing", "tonic"] }
miden-client-sqlite-store = { version = "0.13.0" }
miden-protocol = { version = "0.13.0" }
tokio = { version = "1.46", features = ["rt-multi-thread", "macros"] }
rand = "0.9"
